--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -66,7 +66,7 @@
                 <div class="card-header bg-danger text-white">Fees Management</div>
                 <div class="card-body">
                     <a href="{{ url_for('main.fee_components') }}" class="btn btn-outline-danger btn-block">Fee Components</a>
-                    <a href="{{ url_for('main.student_fees') }}" class="btn btn-outline-danger btn-block">Student Fees</a>
+                    <a href="{{ url_for('main.view_class_fees') }}" class="btn btn-outline-danger btn-block">Student Fees</a>
                     <a href="{{ url_for('main.record_payment') }}" class="btn btn-outline-danger btn-block">Record Payment</a>
                 </div>
             </div>
