--- a/app/templates/view_fees.html
+++ b/app/templates/view_fees.html
@@ -20,7 +20,14 @@
 
         <div class="form-group">
             <label for="academic_year">Academic Year:</label>
-            <input type="text" class="form-control" id="academic_year" name="academic_year" value="{{ selected_academic_year or '' }}">
+            <select class="form-control" id="academic_year" name="academic_year" required>
+                <option value="">-- Select Academic Year --</option>
+                {% for year in academic_years %}  {# Iterate through the unique academic years #}
+                    <option value="{{ year }}" {% if selected_academic_year == year %}selected{% endif %}>
+                        {{ year }}
+                    </option>
+                {% endfor %}
+            </select>
         </div>
 
         <div class="form-group">
