--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -55,7 +55,7 @@
                                 <li><a class="dropdown-item" href="{{ url_for('main.fee_components') }}">Fee Components</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('main.view_class_fees') }}">Class Fees</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('main.add_fee_component_to_class') }}">Assign Fees to Classes</a></li>
-                               
+                                <li><a class="dropdown-item" href="{{ url_for('main.generate_fees') }}">Generate Class Fees</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('main.record_payment') }}">Record Payment</a></li>
                             </ul>
                         </li>
