--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -73,7 +73,7 @@
         padding: 1px;
     }
 
-    .background-image {
+    body {
         position: absolute;
         top: 0;
         left: 0;
@@ -82,9 +82,6 @@
         background-image: url('static/images/students.jpg'); /* Replace with your image path */
         background-size: cover;
         background-position: center;
-        z-index: -1; /* Place image behind other content */
-        opacity: 0.5; /* Adjust opacity for better readability of text */
-        margin-top: 10px;
     }
 
     .hero {
