--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,8 @@
     <div class="background-image"></div>  <div class="hero">
         <h1>Welcome to School Management Portal</h1>
         <p>Your trusted platform for managing student success, teacher guidance, and educational progress all in one place.</p>
-        <p>Please login to access your school platform.</p>
+        <p>Please login to access your school platform. </p>
+        <p>If your school does not have an account, click <a href="{{ url_for('main.register_school') }}">here</a> to register your school first.</p>
 
         <div class="login-form-container">  <h2>Login</h2>
             <form id="login-form" method="POST" action="{{ url_for('main.index') }}">
@@ -56,7 +57,23 @@
 
     </div>
 </div>
+<style>
+    .background-image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('static/images/students.jpg');
+        background-size: cover;
+        background-position: center;
+        z-index: -1;
+        opacity: 0.5;
+        margin-top: 250px;
+        margin-bottom: 4px;
 
+    }
+</style>
 <style>
     /* body, html {
     height: 100%;
@@ -73,16 +90,16 @@
         padding: 1px;
     }
 
-    body {
+    /* body {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url('static/images/students.jpg'); /* Replace with your image path */
+        background-image: url('static/images/students.jpg');
         background-size: cover;
         background-position: center;
-    }
+    } */
 
     .hero {
         text-align: center;
