--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,28 +11,14 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </head>
-<style>
-    .background-image {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: url('static/images/students.jpg'); /* Replace with your image path */
-        background-size: cover;
-        background-position: center;
-        z-index: -1; /* Place image behind other content */
-        opacity: 0.5; /* Adjust opacity for better readability of text */
-        margin-top: 10px;
-    }
-</style>
+
 <body>
     <header>
         <div class="logo">
             <a href="{{ url_for('main.index') }}">
                 <img src="{{ url_for('main.uploaded_file', filename=g.school_logo.split('/')[-1]) }}" 
                      alt="School Logo" 
-                     width="100" height="auto">
+                     width="200" height="auto">
             </a>
         </div>
         <style>
@@ -63,6 +49,21 @@
     {% include 'navigation.html' %}
     
     <div class="container">
+
+        <!-- Flash Messages -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <div class="mb-3">
+            {% for category, message in messages %}
+            <div class="alert alert-{{ category }}" role="alert">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+        {% endwith %}
+
+        
         {% block content %}{% endblock %}
     </div>
     
