--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 {% block content %}
 <div class="container d-flex justify-content-center align-items-center vh-100">
@@ -19,4 +19,4 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% endblock %} -->
